app/assets/stylesheets/media.scss
@import 'common';
@import 'video.js/dist/video-js';
@import 'legacy_media';

// NOTE: This is overriding bootstrap_media.css
.#{$namespace}-media {
  display: flex;
  min-height: 175px;
  overflow-y: hidden !important;
  position: relative;
  text-align: center;
}


// VideoJS CSS overrides for responsive layout
// See http://andreassauer.name/experimente/video-js/demo.html
.video-js {
  width: 100% !important;

  &::after {
    content: '.';
    display: block;
    height: 0;
    margin: 0 0 0 -100%;
    padding: 0;
    padding-top: 40.1%;
    position: relative;
    visibility: hidden;
  }

  // Ensure fullscreen media is as large as possible.
  &.vjs-fullscreen {
    audio,
    video {
      height: 100% !important;
      width: 100% !important;
    }
  }

  .vjs-poster {
    bottom: 0;
    left: 0;
    position: absolute;
    right: 0;
    top: 0;
  }
}

.media-component {
  header {
    border-top: 2px solid rgb(140, 21, 21);
    border-bottom: 1px solid gray;

    background-color: white;
    padding-left: 4px;
    padding-right: 4px;
    display: flex;
    flex-direction: column;
    flex-shrink: 0;

    nav {
      font-size: 15px;
      display: flex;
      flex-direction: row;
      min-height: 32px;
      align-items: center;

      button {
        background-color: transparent;
        border: none;
        border-radius: 50%;
        padding: 12px;

        &:hover {
          background-color: lightgray;
        }
      }

      h2 {
        color: rgba(0, 0, 0, 0.87);
        padding-left: 4px;
        font-size: 1.067rem;
        font-weight: 400;
        line-height: 1.6em;
        flex-grow: 1;
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;
      }
    }
  }

  .sul-embed-media-file {
    height: 100%;
    max-width: 100%;
  }
  
  .button-label {
    width: 100%;
    display: flex;
    align-items: inherit;
    justify-content: inherit;
  }

  .MuiSvgIcon-root {
    width: 1em;
    height: 1em;
    display: inline-block;
    font-size: 1.5rem;
    flex-shrink: 0;
  }

  .media-component-body {
    display: flex;
    flex-grow: 1;

    .sul-embed-media-wrapper {
      display: inline-block;
      height: 100%;
      position: relative;
      text-align: center;
      width: 100%;
      audio {
        min-width: 300px;
        width: 100%;
      }
    }
  }

  --drawer-width: 25vw;
  --tab-width: 35px;

  .collapse {
    width: 0px;
    overflow: hidden;
    transition: flex-basis .5s ease-in-out;
    flex-grow: 0;
    flex-shrink: 0;
    flex-basis: 0;

    .inner {
      // This avoids wrapping when animating.
      width: calc(var(--drawer-width) + var(--tab-width));
      padding: 1rem;
    }

    &.open {
      flex-basis: var(--drawer-width);
    }
  }

  .left-drawer {
    border-right: 1px solid gray;
    display: flex;

    .vertTabs {
      flex-basis: var(--tab-width);
      flex-shrink: 0;
      height: 100%;
      margin-left: auto;
      margin-right: auto;
      padding-top: 1rem;
      text-align: center;
      display: flex;
      flex-direction: column;
      border-right: 1px solid gray;

      button {
        background-color: transparent;
        border: 0;
        display: block;
        margin-bottom: 0.5rem;
        padding: 5px;
        &:hover {
          background-color: lightgray;
        }
      }
    }
  }

  .right-drawer {
    border-left: 1px solid gray;
  }
}

